--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.15",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
-    "firebase": "^9.6.1",
+    "firebase": "^9.6.3",
     "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
