--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.3",
     "formik": "^2.2.9",
+    "jest": "^26.6.3",
+    "jest-expo": "^44.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -31,6 +33,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/yup": "^0.29.13",
+    "react-test-renderer": "17",
     "typescript": "~4.3.5"
   },
   "private": true
