--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,9 +1,9 @@
 name: Expo App Continuous Integration
 
-on: 
-    pull_request:
-      branches: [ main ]
-    
+on:
+  pull_request:
+    branches: [main]
+
 jobs:
   test_pull_requests:
     runs-on: ubuntu-latest
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: "16"
       - run: yarn install
       - run: yarn test
