--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.15",
+    "@react-navigation/drawer": "^6.2.0",
+    "@react-navigation/material-bottom-tabs": "^6.1.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.1.0",
+    "color": "^4.2.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.5",
@@ -21,6 +25,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-appearance": "~0.3.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-paper": "^4.11.1",
     "react-native-reanimated": "~2.3.1",
@@ -33,6 +38,7 @@
     "@babel/core": "^7.12.9",
     "@testing-library/jest-native": "^4.0.4",
     "@testing-library/react-native": "^9.0.0",
+    "@types/color": "^3.0.3",
     "@types/jest": "^27.4.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
