--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/yup": "^0.29.13",
     "jest": "^27.4.7",
     "jest-expo": "^44.0.1",
+    "prettier": "2.5.1",
     "react-test-renderer": "^17.0.2",
     "typescript": "~4.3.5"
   },
