--- a/package.json
+++ b/package.json
@@ -54,5 +54,14 @@
       "js",
       "jsx"
     ]
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 1,
+    "semi": true,
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "bracketSameLine": false,
+    "useTabs": true
   }
 }
