--- a/package.json
+++ b/package.json
@@ -1,67 +1,68 @@
 {
-  "name": "diabetes-management-app",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.15",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "firebase": "^9.6.5",
-    "formik": "^2.2.9",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-paper": "^4.11.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@testing-library/jest-native": "^4.0.4",
-    "@testing-library/react-native": "^9.0.0",
-    "@types/jest": "^27.4.0",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "@types/react-test-renderer": "^17.0.1",
-    "@types/yup": "^0.29.13",
-    "jest": "^27.4.7",
-    "jest-expo": "^44.0.1",
-    "prettier": "2.5.1",
-    "react-test-renderer": "^17.0.2",
-    "typescript": "~4.3.5"
-  },
-  "private": true,
-  "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx"
-    ]
-  },
-  "prettier": {
-    "trailingComma": "es5",
-    "tabWidth": 1,
-    "semi": true,
-    "singleQuote": true,
-    "bracketSpacing": true,
-    "bracketSameLine": false,
-    "useTabs": true
-  }
+	"name": "diabetes-management-app",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject",
+		"test": "jest",
+		"format": "yarn prettier --write ."
+	},
+	"dependencies": {
+		"@react-native-async-storage/async-storage": "^1.15.15",
+		"@react-navigation/native": "^6.0.6",
+		"@react-navigation/native-stack": "^6.2.5",
+		"expo": "~44.0.0",
+		"expo-status-bar": "~1.2.0",
+		"firebase": "^9.6.5",
+		"formik": "^2.2.9",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
+		"react-native": "0.64.3",
+		"react-native-paper": "^4.11.1",
+		"react-native-safe-area-context": "3.3.2",
+		"react-native-screens": "~3.10.1",
+		"react-native-web": "0.17.1",
+		"yup": "^0.32.11"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"@testing-library/jest-native": "^4.0.4",
+		"@testing-library/react-native": "^9.0.0",
+		"@types/jest": "^27.4.0",
+		"@types/react": "~17.0.21",
+		"@types/react-native": "~0.64.12",
+		"@types/react-test-renderer": "^17.0.1",
+		"@types/yup": "^0.29.13",
+		"jest": "^27.4.7",
+		"jest-expo": "^44.0.1",
+		"prettier": "2.5.1",
+		"react-test-renderer": "^17.0.2",
+		"typescript": "~4.3.5"
+	},
+	"private": true,
+	"jest": {
+		"preset": "jest-expo",
+		"transformIgnorePatterns": [
+			"node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+		],
+		"moduleFileExtensions": [
+			"ts",
+			"tsx",
+			"js",
+			"jsx"
+		]
+	},
+	"prettier": {
+		"trailingComma": "es5",
+		"tabWidth": 1,
+		"semi": true,
+		"singleQuote": true,
+		"bracketSpacing": true,
+		"bracketSameLine": false,
+		"useTabs": true
+	}
 }
