--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 jobs:
-  test_pull_requests:
+  run_test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
