--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -12,5 +12,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16"
+      - name: Installing dependencies
       - run: yarn install
+      - name: Running tests
       - run: yarn test
