--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -10,11 +10,13 @@ jobs:
     steps:
       - name: Check out the repository
         uses: actions/checkout@v2
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - name: Setting up Node
         uses: actions/setup-node@v2
         with:
           node-version: "16"
       - name: 📦 Installing packages
         run: yarn install
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: Running tests...
         run: yarn test
