--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -12,6 +12,6 @@ jobs:
         uses: actions/checkout@v2   # Check out the repository first.
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - name: Verifying if code was formatted properly
-      - uses: actionsx/prettier@v2  # https://github.com/marketplace/actions/actionsx-prettier
+        uses: actionsx/prettier@v2  # https://github.com/marketplace/actions/actionsx-prettier
         with:
           args: --check .            # Verify that the files are `prettier`
