--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
    },
    "devDependencies": {
       "@babel/core": "^7.12.9",
+		"@firebase/rules-unit-testing": "^2.0.2",
+    	"@firebase/testing": "^0.20.11",
       "@testing-library/jest-native": "^4.0.4",
       "@testing-library/react-native": "^9.0.0",
       "@types/jest": "^27.4.0",
