--- a/package.json
+++ b/package.json
@@ -58,11 +58,11 @@
 	},
 	"prettier": {
 		"trailingComma": "es5",
-		"tabWidth": 1,
+		"tabWidth": 3,
 		"semi": true,
 		"singleQuote": true,
 		"bracketSpacing": true,
 		"bracketSameLine": false,
-		"useTabs": true
+		"useTabs": false
 	}
 }
