Enabling `Prettier` into the codebase (#25)
* Added `prettier` as a dev package in the project

* Created basic prettier settings in `.prettierrc.json`

* Created `.prettierignore`

* Moved prettier config into `package.json` and deleted `.prettierrc.json`

* Added script to format with prettier in the `package.json`

* Update github actions to check for file format

* Ignoring yml files when formatting

* Rollbacked changes to `integrate.yml`

* Created new action to verify format in the codebase

* Renamed `name` fied in `integrate.yml`

* Fixed format in `integrate.yml`

* Update indentation in `format.yml`

* Renamed main job in `integrate.yml`

* Renamed main job in `integrate.yml`

* Added `runs-on` field in `format.yml`

* Updated `integrate.yml`

* Fixed `integrate.yml`

* Updated messages in `format.yml` and `integrate.yml`

* Attempting to fix `format.yml`

* Attempting to fix `format.yml`

* Added helper message in `format.yml`

* Renamed `format.yml` to `code-quality.yml`

* Added `.json` to the ignore list for prettier

* Updated `package.json`

* Prettify directory

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,16 +1,22 @@
-name: Expo App Continuous Integration
+name: Continuous Integration
 
 on:
   pull_request:
     branches: [main]
 
 jobs:
-  test_pull_requests:
+  run_tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Check out the repository
+        uses: actions/checkout@v2
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - name: Setting up Node
+        uses: actions/setup-node@v2
         with:
           node-version: "16"
-      - run: yarn install
-      - run: yarn test
+      - name: 📦 Installing packages
+        run: yarn install
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: Running tests...
+        run: yarn test
